initial docker config

--- a/api/default.conf
+++ b/api/default.conf
@@ -1,11 +1,11 @@
 server {
     listen       80;
     server_name  localhost;
-
     
-    location /lliwio {
-        proxy_pass http://lliwio_api/;
+    location / {
+       proxy_pass    http://lliwio_api:8080/;
     }
+    
     
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
