--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,21 @@
 version: '3'
 services:
   lliwio_nginx:
-    image: nginx/alpine
-    build: ./nginx
+    image: nginx:alpine
+    container_name: lliwio_nginx
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d
     ports: 
       - "80:80"
+    depends_on:
+      - lliwio_api
+  
+  lliwio_api:
+    build: ./api
+    container_name: lliwio_api
 
-  lliwio_frontend:
-    build: ./ui/src
-    volumes: ./ui/src:/app/src
-    ports:
-      - "5050:5050"
+  # lliwio_frontend:
+  #   build: ./ui/src
+  #   volumes: ./ui/src:/app/src
+  #   ports:
+  #     - "5050:5050"
