finished basic api implmentation: adjust docker config and set up GET http method on root for test purposes

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,13 +1,7 @@
-FROM golang:1.9.2 as builder
+FROM golang:1.9.2
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 COPY main.go /usr/src/app
 RUN go build -o lliwio_api.exe
-
-FROM nginx:alpine
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-COPY --from=builder /usr/src/app/lliwio_api.exe .
-COPY default.conf /etc/nginx/conf.d
-EXPOSE 80 8080
-CMD ["./lliwio_api.exe"]
+EXPOSE 8080
+CMD ["/usr/src/app/lliwio_api.exe"]
