--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,7 +4,7 @@ server {
 
     
     location /lliwio {
-        proxy_pass http://lliwio_api/;
+        proxy_pass http://lliwio_api:8080/;
     }
     
     error_page   500 502 503 504  /50x.html;
