added initial particle instantiation

--- a/nginx/conf.d/dev/default.conf
+++ b/nginx/conf.d/dev/default.conf
@@ -2,6 +2,9 @@ server {
     listen       80;
     server_name  localhost;
 
+    location / {
+        proxy_pass http://lliwio_web_vis:5050/;
+    }
     
     location /lliwio {
         proxy_pass http://lliwio_api:3000/;
